// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`int: anonymous allocation with negative literal > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": -42,
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__1",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 6,
  },
]
`;

exports[`int: anonymous allocation with negative literal > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int: anonymous allocation with negative literal > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__1": {
    "byteAddress": 0,
    "default": -42,
    "elementWordSize": 4,
    "id": "__anonymous__1",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int: mix of anonymous and named allocations > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 5,
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "named",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 15,
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__1",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "named",
      },
    ],
    "instruction": "push",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 8,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__3",
      },
    ],
    "instruction": "push",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 10,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 12,
  },
]
`;

exports[`int: mix of anonymous and named allocations > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 12
    i32.const 0
    i32.load
    i32.const 4
    i32.load
    i32.add
    i32.const 8
    i32.load
    i32.add
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int: mix of anonymous and named allocations > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__1": {
    "byteAddress": 0,
    "default": 5,
    "elementWordSize": 4,
    "id": "__anonymous__1",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "__anonymous__3": {
    "byteAddress": 8,
    "default": 15,
    "elementWordSize": 4,
    "id": "__anonymous__3",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
  "named": {
    "byteAddress": 4,
    "default": 10,
    "elementWordSize": 4,
    "id": "named",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 12,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 3,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int: multiple anonymous allocations > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 20,
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 30,
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__1",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__2",
      },
    ],
    "instruction": "push",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 8,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__3",
      },
    ],
    "instruction": "push",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 10,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 12,
  },
]
`;

exports[`int: multiple anonymous allocations > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 12
    i32.const 0
    i32.load
    i32.const 4
    i32.load
    i32.add
    i32.const 8
    i32.load
    i32.add
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int: multiple anonymous allocations > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__1": {
    "byteAddress": 0,
    "default": 10,
    "elementWordSize": 4,
    "id": "__anonymous__1",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "__anonymous__2": {
    "byteAddress": 4,
    "default": 20,
    "elementWordSize": 4,
    "id": "__anonymous__2",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "__anonymous__3": {
    "byteAddress": 8,
    "default": 30,
    "elementWordSize": 4,
    "id": "__anonymous__3",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 12,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 3,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int: with constant identifier (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "MY_VALUE",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 100,
      },
    ],
    "instruction": "const",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "MY_VALUE",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__2",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 7,
  },
]
`;

exports[`int: with constant identifier (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int: with constant identifier (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__2": {
    "byteAddress": 0,
    "default": 100,
    "elementWordSize": 4,
    "id": "__anonymous__2",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int: with literal (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 42,
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__1",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 6,
  },
]
`;

exports[`int: with literal (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int: with literal (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__1": {
    "byteAddress": 0,
    "default": 42,
    "elementWordSize": 4,
    "id": "__anonymous__1",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int: with named identifier > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "foo",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 42,
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "foo",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 6,
  },
]
`;

exports[`int: with named identifier > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int: with named identifier > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "foo": {
    "byteAddress": 0,
    "default": 42,
    "elementWordSize": 4,
    "id": "foo",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
